added new block and contacts page

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <body>
     <div class="bg-hero">
         <header class="header">
-            <h2 class="logo text-28">Прочно</h2>
+            <h2 class="logo text-28"><a class="logo text-28" href="./index.html">Прочно</a></h2>
             <ul class="nav">
-                <li class="text-20"><a href="#">Проекты</a></li>
-                <li class="text-20"><a href="#">Галерея</a></li>
-                <li class="text-20"><a href="#">Контакты</a></li>
+                <li class="text-20"><a class="text-20" href="#">Проекты</a></li>
+                <li class="text-20"><a class="text-20" href="#">Галерея</a></li>
+                <li class="text-20"><a class="text-20" href="./contacts.html">Контакты</a></li>
             </ul>
             <div class="nav-social">
                 <a href="#">
@@ -50,19 +50,19 @@
             под&nbsp;ключ от&nbsp;производителя</h2>
         <div class="info-container">
             <div class="info-card">
-                <p class="info-card_header">20 лет</p>
+                <p class="info-card_title">20 лет</p>
                 <p class="info-card_text">гарантия на дома</p>
             </div>
             <div class="info-card">
-                <p class="info-card_header">2020 г.</p>
+                <p class="info-card_title">2020 г.</p>
                 <p class="info-card_text">основания компании</p>
             </div>
             <div class="info-card">
-                <p class="info-card_header">70 дней</p>
+                <p class="info-card_title">70 дней</p>
                 <p class="info-card_text">средний срок <br /> строительства</p>
             </div>
             <div class="info-card">
-                <p class="info-card_header">более 20</p>
+                <p class="info-card_title">более 20</p>
                 <p class="info-card_text">домов построено</p>
             </div>
         </div>
@@ -122,8 +122,8 @@
         <div class="projects-container">
             <div class="project-card project-card-padding">
                 <div class="project-card-list">
-                    <h3 class="project-card-header">Модель какого-то дома</h3>
-                    <div class="project-container-gap">
+                    <h3 class="project-card-title">Модель какого-то дома</h3>
+                    <div class="project-container-content">
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
@@ -161,7 +161,7 @@
                             </div>
                         </div>
                         <div class="project-container-info">
-                            <p class="project-card-header weight-500">1 000 000 ₽</p>
+                            <p class="project-card-title weight-500">1 000 000 ₽</p>
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
@@ -170,7 +170,8 @@
                     </div>
                 </div>
                 <div class="swipers-container">
-                    <div class="swiper mySwiper-1" style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff">
+                    <div class="swiper mySwiper-1"
+                        style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff">
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
@@ -220,8 +221,8 @@
                     <img src="./images/project-img.png" alt="" width="892">
                 </div>
                 <div class="project-card-list">
-                    <h3 class="project-card-header">Модель какого-то дома</h3>
-                    <div class="project-container-gap">
+                    <h3 class="project-card-title">Модель какого-то дома</h3>
+                    <div class="project-container-content">
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
@@ -259,7 +260,7 @@
                             </div>
                         </div>
                         <div class="project-container-info">
-                            <p class="project-card-header weight-500">1 000 000 ₽</p>
+                            <p class="project-card-title weight-500">1 000 000 ₽</p>
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
@@ -270,8 +271,8 @@
             </div>
             <div class="project-card">
                 <div class="project-card-list">
-                    <h3 class="project-card-header">Модель какого-то дома</h3>
-                    <div class="project-container-gap">
+                    <h3 class="project-card-title">Модель какого-то дома</h3>
+                    <div class="project-container-content">
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
@@ -309,7 +310,7 @@
                             </div>
                         </div>
                         <div class="project-container-info">
-                            <p class="project-card-header weight-500">1 000 000 ₽</p>
+                            <p class="project-card-title weight-500">1 000 000 ₽</p>
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
@@ -324,7 +325,7 @@
         </div>
         <div class="btn btn-white">
             <p class="text-24 btn-text text-24-green">Посмотреть все&nbsp;проекты</p>
-            <img src="./images/arrow.png" alt="arrow">
+            <img src="./images/arrow-green.png" alt="arrow">
         </div>
     </section>
     <section class="green-bg">
@@ -336,47 +337,50 @@
         <p class="text-24 text-white">Нас выбирают по нескольким причинам:</p>
         <div class="about-us-container">
             <div class="info-card about-us-card">
-                <p class="info-card_header text-white">Фиксированная цена</p>
+                <p class="info-card_title text-white">Фиксированная цена</p>
                 <p class="info-card_text text-white">При подписании договора мы учитываем все детали. Вы застрахованы от
                     непредвиденных расходов</p>
             </div>
             <div class="info-card about-us-card">
-                <p class="info-card_header text-white">Изготовление «под ключ»</p>
+                <p class="info-card_title text-white">Изготовление «под ключ»</p>
                 <p class="info-card_text text-white">Наши дома созданы с заботой, они полностью готовы к проживанию. Вам
                     остается лишь расставить мебель</p>
             </div>
             <div class="info-card about-us-card">
-                <p class="info-card_header text-white">Индивидуальный подход</p>
+                <p class="info-card_title text-white">Индивидуальный подход</p>
                 <p class="info-card_text text-white">В любой проект можно внести изменения касаемо планировки,
                     отделочных материалов или цветовых решений</p>
             </div>
             <div class="info-card about-us-card">
-                <p class="info-card_header text-white">Время</p>
+                <p class="info-card_title text-white">Время</p>
                 <p class="info-card_text text-white">Производство осуществляется за 3-5 недель, в зависимости от размера
                     проекта. Монтаж составляет 5-7 дней. Переехать в свой новый дом Вы можете уже в следующем месяце</p>
             </div>
             <div class="info-card about-us-card">
-                <p class="info-card_header text-white">Долговечность</p>
+                <p class="info-card_title text-white">Долговечность</p>
                 <p class="info-card_text text-white">Наши дома предназначены для круглогодичного проживания. Они прочны
                     и изностойки. Обладают отличными звукоизоляционными показателями. Срок службы от 50 лет</p>
             </div>
             <div class="info-card about-us-card">
-                <p class="info-card_header text-white">Полный цикл</p>
+                <p class="info-card_title text-white">Полный цикл</p>
                 <p class="info-card_text text-white">Производство, монтаж, доставку и фундамент — мы берем на себя! Вы
                     можете нам делегировать — поиск участка, его благоустройство, септик, колодец или скважину, и даже
                     меблировку!</p>
             </div>
         </div>
     </section>
-    <section>
-        <img src="" alt="">
-        <div>
-            <h2>Энергоэффективный и надежный дом за 70 дней.</h2>
-            <form action="">
-                <input type="text">
-                <input type="text">
-                <input type="checkbox" name="" id="">
-                <input type="button" value="">
+    <section class="contacts">
+        <img src="./images/project-img.png" alt="" width="892">
+        <div class="form-container">
+            <h2 class="text-42">Оставить заявку</h2>
+            <form class="form">
+                <input type="text" placeholder="Имя">
+                <input type="number" placeholder="Телефон">
+                <div class="check-container">
+                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <span class="check">политикой
+                            конфиденциальности</span></label>
+                </div>
+                <button class="btn-form">Отправить</button>
             </form>
         </div>
     </section>
