footer and small changes

--- a/index.html
+++ b/index.html
@@ -330,40 +330,46 @@
     </section>
     <section class="green-bg">
         <h2 class="text-42 text-white">Почему мы?</h2>
-        <p class="about-us-text text-white">Мы занимаемся проектированием и строительством домов по быстровозводимым
-            технологиям более 4х лет. За это
-            время мы максимально оптимизировали проекты, сборку и комплектации, для удовлетворения всех Ваших
-            потребностей. Мы обеспечиваем гарантии качества и надежность Вашего дома!</p>
-        <p class="text-24 text-white">Нас выбирают по нескольким причинам:</p>
+        <p class="about-us-text text-white">Мы занимаемся проектированием&nbsp;и строительством домов
+            по&nbsp;быстровозводимым
+            технологиям более 4х&nbsp;лет. За это
+            время мы максимально оптимизировали проекты, сборку и&nbsp;комплектации, для&nbsp;удовлетворения всех Ваших
+            потребностей. Мы обеспечиваем гарантии качества и&nbsp;надежность Вашего дома!</p>
+        <p class="text-24 text-white">Нас выбирают по&nbsp;нескольким причинам:</p>
         <div class="about-us-container">
             <div class="info-card about-us-card">
                 <p class="info-card_title text-white">Фиксированная цена</p>
-                <p class="info-card_text text-white">При подписании договора мы учитываем все детали. Вы застрахованы от
+                <p class="info-card_text text-white">При подписании договора мы учитываем все детали. Вы застрахованы
+                    от&nbsp;
                     непредвиденных расходов</p>
             </div>
             <div class="info-card about-us-card">
-                <p class="info-card_title text-white">Изготовление «под ключ»</p>
+                <p class="info-card_title text-white">Изготовление «под&nbsp;ключ»</p>
                 <p class="info-card_text text-white">Наши дома созданы с заботой, они полностью готовы к проживанию. Вам
                     остается лишь расставить мебель</p>
             </div>
             <div class="info-card about-us-card">
                 <p class="info-card_title text-white">Индивидуальный подход</p>
-                <p class="info-card_text text-white">В любой проект можно внести изменения касаемо планировки,
+                <p class="info-card_text text-white">В&nbsp;любой проект можно внести изменения касаемо планировки,
                     отделочных материалов или цветовых решений</p>
             </div>
             <div class="info-card about-us-card">
                 <p class="info-card_title text-white">Время</p>
-                <p class="info-card_text text-white">Производство осуществляется за 3-5 недель, в зависимости от размера
-                    проекта. Монтаж составляет 5-7 дней. Переехать в свой новый дом Вы можете уже в следующем месяце</p>
+                <p class="info-card_text text-white">Производство осуществляется за 3-5 недель, в&nbsp;зависимости от
+                    размера
+                    проекта. Монтаж составляет 5-7&nbsp;дней. Переехать в&nbsp;свой новый дом Вы можете уже
+                    в&nbsp;следующем месяце</p>
             </div>
             <div class="info-card about-us-card">
                 <p class="info-card_title text-white">Долговечность</p>
                 <p class="info-card_text text-white">Наши дома предназначены для круглогодичного проживания. Они прочны
-                    и изностойки. Обладают отличными звукоизоляционными показателями. Срок службы от 50 лет</p>
+                    и изностойки. Обладают отличными звукоизоляционными показателями. Срок службы от&nbsp;50&nbsp;лет
+                </p>
             </div>
             <div class="info-card about-us-card">
                 <p class="info-card_title text-white">Полный цикл</p>
-                <p class="info-card_text text-white">Производство, монтаж, доставку и фундамент — мы берем на себя! Вы
+                <p class="info-card_text text-white">Производство, монтаж, доставку и&nbsp;фундамент — мы берем
+                    на&nbsp;себя! Вы
                     можете нам делегировать — поиск участка, его благоустройство, септик, колодец или скважину, и даже
                     меблировку!</p>
             </div>
@@ -377,7 +383,8 @@
                 <input type="text" placeholder="Имя">
                 <input type="number" placeholder="Телефон">
                 <div class="check-container">
-                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <span class="check">политикой
+                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <span
+                            class="check">политикой
                             конфиденциальности</span></label>
                 </div>
                 <button class="btn-form">Отправить</button>
@@ -385,22 +392,33 @@
         </div>
     </section>
     <footer>
-        <div>
-            <p class="logo">Прочно</p>
-            <div>
-                <p>Проекты</p>
-                <p>Галерея</p>
-                <p>Контакты</p>
+        <div class="footer-container">
+            <div class="footer-menu-contacts">
+                <div class="footer-menu">
+                    <h2 class="logo text-28"><a class="logo text-28" href="./index.html">Прочно</a></h2>
+                    <ul class="nav">
+                        <li class="text-20"><a class="text-20" href="#">Проекты</a></li>
+                        <li class="text-20"><a class="text-20" href="#">Галерея</a></li>
+                        <li class="text-20"><a class="text-20" href="./contacts.html">Контакты</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contacts">
+                    <a href="#">
+                        <p class="text-24 tel">+7&nbsp;999&nbsp;999-99-99</p>
+                    </a>
+                    <div class="socials">
+                        <a href="#"><img src="./images/tg-icon.png" alt="telegram"></a>
+                        <a href="#"><img src="./images/vk-icon.png" alt="vk"></a>
+                    </div>
+                </div>
             </div>
-            <div>
-                <p>+7 999 999-99-99</p>
-                <img src="" alt="">
-                <img src="" alt="">
+            <div class="footer-info">
+                <p>ИП Гендлин Юрий Максимович<br>ИНН 780107539268<br>ОГРНИП 321784700014744<br>ОКПО 2005094935
+                </p>
+                <p class="footer-info-remark">Сайт mhouse.pro носит информационный характер и не является публичной офертой, определяемой
+                    положениями Ст. 437 ГК РФ.<br>Для получения более точной информации обращайтесь по указанным в контактах телефонам.</p>
             </div>
         </div>
-        <p>ИП Фамилия И.О ИНН 1234456789</p>
-        <p>Сайт mhouse.pro носит информационный характер и не является публичной офертой, определяемой положениями Ст.
-            437 ГК РФ.Для получения более точной информации обращайтесь по указанным в контактах телефонам.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
