--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
         <div class="form-container">
             <h2 class="text-42">Оставить заявку</h2>
             <form class="form">
-                <input type="text" placeholder="Имя">
-                <input type="number" placeholder="Телефон">
+                <input type="text" placeholder="Имя" class="input-name">
+                <input type="number" placeholder="Телефон" class="input-phone">
                 <div class="check-container">
                     <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <span
                             class="check">политикой
