added gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Контакты</title>
+    <title>Галерея</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
 </head>
+
 <body>
     <header class="header">
         <h2 class="logo text-28 text-black"><a class="logo text-28 text-black" href="./index.html">Прочно</a></h2>
         <ul class="nav">
             <li class="text-20 text-black"><a class="text-20 text-black" href="#">Проекты</a></li>
-            <li class="text-20 text-black"><a class="text-20 text-black" href="./gallery.html">Галерея</a></li>
-            <li class="text-20 text-black"><a class="text-20 text-black nav-underline" href="#">Контакты</a></li>
+            <li class="text-20 text-black"><a class="text-20 text-black nav-underline" href="./gallery.html">Галерея</a>
+            </li>
+            <li class="text-20 text-black"><a class="text-20 text-black" href="#">Контакты</a></li>
         </ul>
         <div class="nav-social">
             <a href="#">
@@ -23,25 +26,17 @@
             <a href="#"><img src="./images/vk-icon.png" alt="vk" width="32"></a>
         </div>
     </header>
-    <section class="map bg-grey">
-        <img src="./images/map.jpeg" alt="карта">
-        <div class="map-container">
-            <div class="map-container-list">
-                <img src="./images/map-icon.png" alt="иконка" width="24">
-                <p class="map-text">г. Санкт-Петербург, ул. Репищева, д. 10, корп. 2</p>
-            </div>
-            <div class="map-container-list">
-                <img src="./images/calendar-icon.png" alt="иконка" width="24">
-                <p class="map-text">10:00 - 22:00 Ежедневно, без выходных</p>
-            </div>
-            <div class="map-container-list">
-                <img src="./images/phone-icon.png" alt="иконка" width="24">
-                <a class="map-text" href="">+7 999 999-99-99</a>
-            </div>
-            <div class="map-container-list">
-                <img src="./images/mail-icon.png" alt="иконка" width="24">
-                <a class="map-text" href="">qwerty@mail.ru</a>
-            </div>
+    <section class="gallery">
+        <h2 class="text-42">Галерея</h2>
+        <div class="gallery-container">
+            <img src="./images/project-img.png" alt="">
+            <img src="./images/project-img.png" alt="">
+            <img src="./images/project-img.png" alt="">
+            <img src="./images/project-img.png" alt="">
+            <img src="./images/project-img.png" alt="">
+            <img src="./images/project-img.png" alt="">
+            <img src="./images/project-img.png" alt="">
+            <img src="./images/project-img.png" alt="">
         </div>
     </section>
     <section class="contacts bg-grey">
@@ -52,7 +47,8 @@
                 <input type="text" placeholder="Имя" class="input-name bg-white">
                 <input type="number" placeholder="Телефон" class="input-phone bg-white">
                 <div class="check-container">
-                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <span class="check">политикой
+                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <span
+                            class="check">политикой
                             конфиденциальности</span></label>
                 </div>
                 <button class="btn-form">Отправить</button>
@@ -66,7 +62,7 @@
                     <h2 class="logo text-28"><a class="logo text-28" href="./index.html">Прочно</a></h2>
                     <ul class="nav">
                         <li class="text-20"><a class="text-20" href="#">Проекты</a></li>
-                        <li class="text-20"><a class="text-20" href="./gallery.html">Галерея</a></li>
+                        <li class="text-20"><a class="text-20" href="#">Галерея</a></li>
                         <li class="text-20"><a class="text-20" href="./contacts.html">Контакты</a></li>
                     </ul>
                 </div>
@@ -83,10 +79,13 @@
             <div class="footer-info">
                 <p>ИП Гендлин Юрий Максимович<br>ИНН 780107539268<br>ОГРНИП 321784700014744<br>ОКПО 2005094935
                 </p>
-                <p class="footer-info-remark">Сайт mhouse.pro носит информационный характер и не является публичной офертой, определяемой
-                    положениями Ст. 437 ГК РФ.<br>Для получения более точной информации обращайтесь по указанным в контактах телефонам.</p>
+                <p class="footer-info-remark">Сайт mhouse.pro носит информационный характер и не является публичной
+                    офертой, определяемой
+                    положениями Ст. 437 ГК РФ.<br>Для получения более точной информации обращайтесь по указанным в
+                    контактах телефонам.</p>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
