--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2 class="logo text-28"><a class="logo text-28" href="./index.html">Прочно</a></h2>
             <ul class="nav">
                 <li class="text-20"><a class="text-20" href="#">Проекты</a></li>
-                <li class="text-20"><a class="text-20" href="#">Галерея</a></li>
+                <li class="text-20"><a class="text-20" href="./gallery.html">Галерея</a></li>
                 <li class="text-20"><a class="text-20" href="./contacts.html">Контакты</a></li>
             </ul>
             <div class="nav-social">
@@ -398,7 +398,7 @@
                     <h2 class="logo text-28"><a class="logo text-28" href="./index.html">Прочно</a></h2>
                     <ul class="nav">
                         <li class="text-20"><a class="text-20" href="#">Проекты</a></li>
-                        <li class="text-20"><a class="text-20" href="#">Галерея</a></li>
+                        <li class="text-20"><a class="text-20" href="./gallery.html">Галерея</a></li>
                         <li class="text-20"><a class="text-20" href="./contacts.html">Контакты</a></li>
                     </ul>
                 </div>
