added media on the index.html

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </div>
             <div class="project-card project-card-padding">
                 <div class="swiper">
-                    <img src="./images/project-img.png" alt="" width="892">
+                    <img src="./images/project-img.png" alt="">
                 </div>
                 <div class="project-card-list">
                     <h3 class="project-card-title">Модель какого-то дома</h3>
@@ -319,7 +319,7 @@
                     </div>
                 </div>
                 <div class="swiper">
-                    <img src="./images/project-img.png" alt="" width="892">
+                    <img src="./images/project-img.png" alt="">
                 </div>
             </div>
         </div>
@@ -376,7 +376,7 @@
         </div>
     </section>
     <section class="contacts">
-        <img src="./images/project-img.png" alt="" width="892">
+        <img src="./images/project-img.png" alt="картинка дома">
         <div class="form-container">
             <h2 class="text-42">Оставить заявку</h2>
             <form class="form">
