--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header class="header">
             <h2 class="logo text-28"><a class="logo text-28" href="./index.html">Прочно</a></h2>
             <ul class="nav">
-                <li class="text-20"><a class="text-20" href="#">Проекты</a></li>
+                <li class="text-20"><a class="text-20" href="./projects.html">Проекты</a></li>
                 <li class="text-20"><a class="text-20" href="./gallery.html">Галерея</a></li>
                 <li class="text-20"><a class="text-20" href="./contacts.html">Контакты</a></li>
             </ul>
@@ -34,7 +34,7 @@
         </header>
         <section class="hero">
             <div class="hero-text">
-                <h1 class="main-title">Энергоэффективный&nbsp;и надежный дом <span
+                <h1 class="main-title">Энергоэффективный&nbsp;и надежный дом ПАМАГИТЕ<span
                         class="marker">за&nbsp;70&nbsp;дней.</span></h1>
                 <p class="hero-text text-32">С&nbsp;чистовой отделкой&nbsp;и коммуникациями
                     от&nbsp;38&nbsp;300&nbsp;₽/м²!</p>
@@ -478,9 +478,9 @@
                 <input type="text" placeholder="Имя" class="input-name">
                 <input type="number" placeholder="Телефон" class="input-phone">
                 <div class="check-container">
-                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <span
-                            class="check">политикой
-                            конфиденциальности</span></label>
+                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <a
+                            class="check" href="./policy.html">политикой
+                            конфиденциальности</a></label>
                 </div>
                 <button class="btn-form">Отправить</button>
             </form>
@@ -492,7 +492,7 @@
                 <div class="footer-menu">
                     <h2 class="logo text-28"><a class="logo text-28" href="./index.html">Прочно</a></h2>
                     <ul class="nav">
-                        <li class="text-20"><a class="text-20" href="#">Проекты</a></li>
+                        <li class="text-20"><a class="text-20" href="./projects.html">Проекты</a></li>
                         <li class="text-20"><a class="text-20" href="./gallery.html">Галерея</a></li>
                         <li class="text-20"><a class="text-20" href="./contacts.html">Контакты</a></li>
                     </ul>
