--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Контакты</title>
+    <title>Проекты</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
@@ -17,9 +17,10 @@
     <header class="header">
         <h2 class="logo text-28 text-black"><a class="logo text-28 text-black" href="./index.html">Прочно</a></h2>
         <ul class="nav">
-            <li class="text-20 text-black"><a class="text-20 text-black" href="./projects.html">Проекты</a></li>
-            <li class="text-20 text-black"><a class="text-20 text-black" href="./gallery.html">Галерея</a></li>
-            <li class="text-20 text-black"><a class="text-20 text-black nav-underline" href="#">Контакты</a></li>
+            <li class="text-20 text-black"><a class="text-20 text-black nav-underline" href="./projects.html">Проекты</a></li>
+            <li class="text-20 text-black"><a class="text-20 text-black" href="./gallery.html">Галерея</a>
+            </li>
+            <li class="text-20 text-black"><a class="text-20 text-black" href="./projects.html">Контакты</a></li>
         </ul>
         <div class="nav-social">
             <a href="#">
@@ -29,27 +30,7 @@
             <a href="#"><img src="./images/vk-icon.png" alt="vk" width="32"></a>
         </div>
     </header>
-    <section class="map bg-grey">
-        <img src="./images/map.jpeg" alt="карта">
-        <div class="map-container">
-            <div class="map-container-list">
-                <img src="./images/map-icon.png" alt="иконка" width="24">
-                <p class="map-text">г. Санкт-Петербург, ул. Репищева, д. 10, корп. 2</p>
-            </div>
-            <div class="map-container-list">
-                <img src="./images/calendar-icon.png" alt="иконка" width="24">
-                <p class="map-text">10:00 - 22:00 Ежедневно, без выходных</p>
-            </div>
-            <div class="map-container-list">
-                <img src="./images/phone-icon.png" alt="иконка" width="24">
-                <a class="map-text" href="">+7 999 999-99-99</a>
-            </div>
-            <div class="map-container-list">
-                <img src="./images/mail-icon.png" alt="иконка" width="24">
-                <a class="map-text" href="">qwerty@mail.ru</a>
-            </div>
-        </div>
-    </section>
+
     <section class="contacts bg-grey">
         <img src="./images/project-img.png" alt="" width="892">
         <div class="form-container">
@@ -58,9 +39,9 @@
                 <input type="text" placeholder="Имя" class="input-name bg-white">
                 <input type="number" placeholder="Телефон" class="input-phone bg-white">
                 <div class="check-container">
-                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <a class="check"
-                            href="./policy.html">политикой
-                            конфиденциальности</a></label>
+                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <a
+                        class="check" href="./policy.html">политикой
+                        конфиденциальности</a></label>
                 </div>
                 <button class="btn-form">Отправить</button>
             </form>
