--- a/gallery.html
+++ b/gallery.html
@@ -5,18 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Галерея</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
+    <script defer src="./gallery.js"></script>
 </head>
 
 <body>
     <header class="header">
         <h2 class="logo text-28 text-black"><a class="logo text-28 text-black" href="./index.html">Прочно</a></h2>
         <ul class="nav">
-            <li class="text-20 text-black"><a class="text-20 text-black" href="#">Проекты</a></li>
+            <li class="text-20 text-black"><a class="text-20 text-black" href="./projects.html">Проекты</a></li>
             <li class="text-20 text-black"><a class="text-20 text-black nav-underline" href="./gallery.html">Галерея</a>
             </li>
-            <li class="text-20 text-black"><a class="text-20 text-black" href="#">Контакты</a></li>
+            <li class="text-20 text-black"><a class="text-20 text-black" href="./contacts.html">Контакты</a></li>
         </ul>
         <div class="nav-social">
             <a href="#">
@@ -29,14 +34,44 @@
     <section class="gallery">
         <h2 class="text-42">Галерея</h2>
         <div class="gallery-container">
-            <img src="./images/project-img.png" alt="">
-            <img src="./images/project-img.png" alt="">
-            <img src="./images/project-img.png" alt="">
-            <img src="./images/project-img.png" alt="">
-            <img src="./images/project-img.png" alt="">
-            <img src="./images/project-img.png" alt="">
-            <img src="./images/project-img.png" alt="">
-            <img src="./images/project-img.png" alt="">
+            <img class="gallery-item" src="./images/house-box-2-1.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-box-2-2.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-box-2-3.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-box-2-4.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-box-2-5.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-box-2-6.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-mini-1-1.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-mini-1-2.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-mini-1-3.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-mini-1-4.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-mini-1-5.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-mini-1-6.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-scand-1-1.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-scand-1-2.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-scand-1-3.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-scand-1-4.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-scand-1-5.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-scand-2-1.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-scand-2-2.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-scand-2-3.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-scand-2-4.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-scand-2-5.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-scand-3-1.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-scand-3-2.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-scand-3-3.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-scand-3-4.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-tilo-1.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-tilo-2.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-tilo-3.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/house-tilo-4.jpg" alt="картинка дома">
+        </div>
+        <div class="popup-image popup-hidden">
+            <div class="popup-image-wrapper">
+                <span id="close">×</span>
+                <div class="arrow arrow-prev">&lt;</div>
+                <img src="./images/project-img.png" alt="картинка дома">
+                <div class="arrow arrow-next">&gt;</div>
+            </div>
         </div>
     </section>
     <section class="contacts bg-grey">
@@ -47,9 +82,9 @@
                 <input type="text" placeholder="Имя" class="input-name bg-white">
                 <input type="number" placeholder="Телефон" class="input-phone bg-white">
                 <div class="check-container">
-                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <span
-                            class="check">политикой
-                            конфиденциальности</span></label>
+                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <a class="check"
+                            href="./policy.html">политикой
+                            конфиденциальности</a></label>
                 </div>
                 <button class="btn-form">Отправить</button>
             </form>
@@ -61,8 +96,8 @@
                 <div class="footer-menu">
                     <h2 class="logo text-28"><a class="logo text-28" href="./index.html">Прочно</a></h2>
                     <ul class="nav">
-                        <li class="text-20"><a class="text-20" href="#">Проекты</a></li>
-                        <li class="text-20"><a class="text-20" href="#">Галерея</a></li>
+                        <li class="text-20"><a class="text-20" href="./projects.html">Проекты</a></li>
+                        <li class="text-20"><a class="text-20" href="./gallery.html">Галерея</a></li>
                         <li class="text-20"><a class="text-20" href="./contacts.html">Контакты</a></li>
                     </ul>
                 </div>
