added wbep images

--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,7 @@
         </div>
     </header>
     <section class="map bg-grey">
-        <img src="./images/map.jpeg" alt="карта">
+        <img class="map-img" src="./images/map.jpeg" alt="карта">
         <div class="map-container">
             <div class="map-container-list">
                 <img src="./images/map-icon.png" alt="иконка" width="24">
