changed contacts page, added iframe

--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,9 @@
         </div>
     </header>
     <section class="map bg-grey">
-        <img class="map-img" src="./images/map.jpeg" alt="карта">
+        <!-- <img class="map-img" src="./images/map.jpeg" alt="карта"> -->
+        <iframe class="desktop-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A85376a662e45e29766dda6d3da45a913f47e2cb2d54aab35f59882883d174afc&amp;source=constructor" width="100%" height="500" frameborder="0"></iframe>
+        <iframe class="mobile-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Acdc42b7f0e111dbc703ee0e2d1c61b5040ffefd68d89cd8e5b561c9e336e2117&amp;source=constructor" width="100%" height="250" frameborder="0"></iframe>
         <div class="map-container">
             <div class="map-container-list">
                 <img src="./images/map-icon.png" alt="иконка" width="24">
