menu hover effect

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
             <li class="text-20 text-black"><a class="text-20 text-black nav-underline" href="./projects.html">Проекты</a></li>
             <li class="text-20 text-black"><a class="text-20 text-black" href="./gallery.html">Галерея</a>
             </li>
-            <li class="text-20 text-black"><a class="text-20 text-black" href="./projects.html">Контакты</a></li>
+            <li class="text-20 text-black"><a class="text-20 text-black" href="./contacts.html">Контакты</a></li>
         </ul>
         <div class="nav-social">
             <a href="#">
