--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
         <ul class="nav">
             <li class="text-20 text-black"><a class="text-20 text-black" href="./projects.html">Проекты</a></li>
             <li class="text-20 text-black"><a class="text-20 text-black" href="./gallery.html">Галерея</a></li>
-            <li class="text-20 text-black"><a class="text-20 text-black nav-underline" href="#">Контакты</a></li>
+            <li class="text-20 text-black"><a class="text-20 text-black nav-underline" href="./contacts.html">Контакты</a></li>
         </ul>
         <div class="nav-social">
             <a href="#">
