--- a/gallery.html
+++ b/gallery.html
@@ -34,42 +34,42 @@
     <section class="gallery">
         <h2 class="text-42">Галерея</h2>
         <div class="gallery-container">
-            <img class="gallery-item" src="./images/house-box-2-1.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-box-2-2.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-box-2-3.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-box-2-4.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-box-2-5.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-box-2-6.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-mini-1-1.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-mini-1-2.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-mini-1-3.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-mini-1-4.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-mini-1-5.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-mini-1-6.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-scand-1-1.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-scand-1-2.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-scand-1-3.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-scand-1-4.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-scand-1-5.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-scand-2-1.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-scand-2-2.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-scand-2-3.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-scand-2-4.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-scand-2-5.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-scand-3-1.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-scand-3-2.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-scand-3-3.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-scand-3-4.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-tilo-1.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-tilo-2.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-tilo-3.webp" alt="картинка дома">
-            <img class="gallery-item" src="./images/house-tilo-4.webp" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-box-2-1.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-box-2-2.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-box-2-3.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-box-2-4.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-box-2-5.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-box-2-6.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-mini-1-1.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-mini-1-2.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-mini-1-3.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-mini-1-4.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-mini-1-5.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-mini-1-6.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-scand-1-1.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-scand-1-2.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-scand-1-3.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-scand-1-4.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-scand-1-5.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-scand-2-1.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-scand-2-2.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-scand-2-3.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-scand-2-4.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-scand-2-5.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-scand-3-1.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-scand-3-2.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-scand-3-3.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-scand-3-4.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-tilo-1.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-tilo-2.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-tilo-3.jpg" alt="картинка дома">
+            <img class="gallery-item" src="./images/houses/house-tilo-4.jpg" alt="картинка дома">
         </div>
         <div class="popup-image popup-hidden">
             <div class="popup-image-wrapper">
                 <span id="close">×</span>
                 <div class="arrow arrow-prev">&lt;</div>
-                <img src="./images/project-img.png" alt="картинка дома">
+                <img src="./images/houses/house-tilo-1.jpg" alt="картинка дома">
                 <div class="arrow arrow-next">&gt;</div>
             </div>
         </div>
