--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="project-cards-wrapper">
             <div class="project-card">
                 <div class="project-card-list">
-                    <h3 class="project-card-title">Модель какого-то дома</h3>
+                    <h3 class="project-card-title">Дом BOX 2</h3>
                     <div class="project-container-content">
                         <div class="project-container">
                             <div class="project-card-container">
@@ -177,19 +177,19 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-4.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-5.jpg" alt="Модульный дом">
                             </div>
                         </div>
                         <!-- If we need navigation buttons -->
@@ -200,19 +200,19 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-4.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-5.jpg" alt="Модульный дом">
                             </div>
                         </div>
                     </div>
@@ -220,7 +220,7 @@
             </div>
             <div class="project-card">
                 <div class="project-card-list">
-                    <h3 class="project-card-title">Модель какого-то дома</h3>
+                    <h3 class="project-card-title">Дом MINI 1</h3>
                     <div class="project-container-content">
                         <div class="project-container">
                             <div class="project-card-container">
@@ -273,19 +273,19 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-4.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-5.jpg" alt="Модульный дом">
                             </div>
                         </div>
                         <!-- If we need navigation buttons -->
@@ -296,19 +296,19 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-4.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-5.jpg" alt="Модульный дом">
                             </div>
                         </div>
                     </div>
@@ -316,7 +316,7 @@
             </div>
             <div class="project-card">
                 <div class="project-card-list">
-                    <h3 class="project-card-title">Модель какого-то дома</h3>
+                    <h3 class="project-card-title">Дом SCAND 1</h3>
                     <div class="project-container-content">
                         <div class="project-container">
                             <div class="project-card-container">
@@ -369,19 +369,19 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-4.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-5.jpg" alt="Модульный дом">
                             </div>
                         </div>
                         <!-- If we need navigation buttons -->
@@ -392,19 +392,19 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-4.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-5.jpg" alt="Модульный дом">
                             </div>
                         </div>
                     </div>
