--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
                             <div class="swiper-slide">
                                 <img src="./images/houses/house-box-2-5.jpg" alt="Модульный дом">
                             </div>
+                            <div class="swiper-slide">
+                                <img src="./images/houses/house-box-2-6.jpg" alt="Модульный дом">
+                            </div>
                         </div>
                         <!-- If we need navigation buttons -->
                         <div class="swiper-button-prev"></div>
@@ -286,6 +289,9 @@
                             </div>
                             <div class="swiper-slide">
                                 <img src="./images/houses/house-mini-1-5.jpg" alt="Модульный дом">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/houses/house-mini-1-6.jpg" alt="Модульный дом">
                             </div>
                         </div>
                         <!-- If we need navigation buttons -->
