--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
         <div class="project-cards-wrapper">
             <div class="project-card">
                 <div class="project-card-list">
-                    <h3 class="project-card-title">Модель какого-то дома</h3>
+                    <h3 class="project-card-title">Дом BOX 2</h3>
                     <div class="project-container-content">
                         <div class="project-container">
                             <div class="project-card-container">
@@ -90,19 +90,22 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-4.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-5.jpg" alt="Модульный дом">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/houses/house-box-2-6.jpg" alt="Модульный дом">
                             </div>
                         </div>
                         <!-- If we need navigation buttons -->
@@ -113,19 +116,19 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-4.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-box-2-5.jpg" alt="Модульный дом">
                             </div>
                         </div>
                     </div>
@@ -133,7 +136,7 @@
             </div>
             <div class="project-card">
                 <div class="project-card-list">
-                    <h3 class="project-card-title">Модель какого-то дома</h3>
+                    <h3 class="project-card-title">Дом MINI 1</h3>
                     <div class="project-container-content">
                         <div class="project-container">
                             <div class="project-card-container">
@@ -186,19 +189,22 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-4.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-5.jpg" alt="Модульный дом">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/houses/house-mini-1-6.jpg" alt="Модульный дом">
                             </div>
                         </div>
                         <!-- If we need navigation buttons -->
@@ -209,19 +215,19 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-4.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-mini-1-5.jpg" alt="Модульный дом">
                             </div>
                         </div>
                     </div>
@@ -229,7 +235,7 @@
             </div>
             <div class="project-card">
                 <div class="project-card-list">
-                    <h3 class="project-card-title">Модель какого-то дома</h3>
+                    <h3 class="project-card-title">Дом SCAND 1</h3>
                     <div class="project-container-content">
                         <div class="project-container">
                             <div class="project-card-container">
@@ -282,19 +288,19 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-4.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-5.jpg" alt="Модульный дом">
                             </div>
                         </div>
                         <!-- If we need navigation buttons -->
@@ -305,19 +311,19 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-4.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-1-5.jpg" alt="Модульный дом">
                             </div>
                         </div>
                     </div>
@@ -325,7 +331,7 @@
             </div>
             <div class="project-card">
                 <div class="project-card-list">
-                    <h3 class="project-card-title">Модель какого-то дома</h3>
+                    <h3 class="project-card-title">Дом SCAND 2</h3>
                     <div class="project-container-content">
                         <div class="project-container">
                             <div class="project-card-container">
@@ -378,19 +384,19 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-2-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-2-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-2-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-2-4.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-2-5.jpg" alt="Модульный дом">
                             </div>
                         </div>
                         <!-- If we need navigation buttons -->
@@ -401,19 +407,19 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-2-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-2-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-2-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-2-4.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-2-5.jpg" alt="Модульный дом">
                             </div>
                         </div>
                     </div>
@@ -421,7 +427,7 @@
             </div>
             <div class="project-card">
                 <div class="project-card-list">
-                    <h3 class="project-card-title">Модель какого-то дома</h3>
+                    <h3 class="project-card-title">Дом SCAND 3</h3>
                     <div class="project-container-content">
                         <div class="project-container">
                             <div class="project-card-container">
@@ -474,19 +480,16 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-3-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-3-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-3-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-3-4.jpg" alt="Модульный дом">
                             </div>
                         </div>
                         <!-- If we need navigation buttons -->
@@ -497,19 +500,16 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-3-1.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-3-2.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-3-3.jpg" alt="Модульный дом">
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="./images/project-img.png" alt="Модульный дом">
+                                <img src="./images/houses/house-scand-3-4.jpg" alt="Модульный дом">
                             </div>
                         </div>
                     </div>
